<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/flash_title">

    <com.android.settingslib.widget.MainSwitchPreference
        android:defaultValue="false"
        android:key="flash_enable"
        android:title="@string/flash_enable_title" />

    <PreferenceCategory
        android:title="@string/flash_status_category">
        <Preference
            android:key="flash_current_intensity"
            android:selectable="false"/>

        <Preference
            android:key="flash_current_on"
            android:selectable="false"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/flash_intesities_category">
        <com.android.settingslib.widget.SelectorWithWidgetPreference
            android:key="flash_intensity_1"
            android:title="@string/flash_intensity_1" />

        <com.android.settingslib.widget.SelectorWithWidgetPreference
            android:key="flash_intensity_2"
            android:title="@string/flash_intensity_2" />

        <com.android.settingslib.widget.SelectorWithWidgetPreference
            android:key="flash_intensity_3"
            android:title="@string/flash_intensity_3" />

        <com.android.settingslib.widget.SelectorWithWidgetPreference
            android:key="flash_intensity_4"
            android:title="@string/flash_intensity_4" />

        <com.android.settingslib.widget.SelectorWithWidgetPreference
            android:key="flash_intensity_5"
            android:title="@string/flash_intensity_5" />

        <com.android.settingslib.widget.FooterPreference
            android:key="flash_footer"
            android:title="@string/flash_footer_summary" />
    </PreferenceCategory>

</PreferenceScreen>
